Fix a textarea layout bug

--- a/src/styles/base.styl
+++ b/src/styles/base.styl
@@ -87,6 +87,7 @@ article
       border-color rgba(0, 0, 0, .2)
 
   textarea
+    display block
     padding 4px 8px
     min-height 8rem
     line-height 1.5
